@@ -122,6 +122,15 @@
       <parameter id="description"
 		 value="Fetch Entries from CiteSeer." />
     </extension>
+    
+    <extension id="DBLPFetcher" plugin-id="net.sf.jabref.core"
+       point-id="EntryFetcher">
+      <parameter id="entryFetcher"
+        value="net.sf.jabref.imports.DBLPFetcher" />
+      <parameter id="name" value="DBLP Entry Fetcher" />
+      <parameter id="description"
+        value="Fetch Entries from DBLP." />
+    </extension>
 
     <!--<extension id="GoogleScholarFetcher" plugin-id="net.sf.jabref.core"
 		point-id="EntryFetcher">
